--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@
 .logo-icon {
   width: 2rem;
   height: 2rem;
-  color: #3b82f6;
+  color: #ffcf00;
 }
 
 .app-title {
@@ -152,7 +152,14 @@
 
 .place-card.selected {
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-  border: 2px solid #3b82f6;
+  border: 1px solid #3b82f6;
+}
+
+.place-card-image{
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
 .place-card-content {
@@ -214,7 +221,7 @@
   }
 
   .map-container {
-    height: 86.5vh;
+    height: 90vh;
   }
 
   .place-list {
@@ -231,4 +238,31 @@
     width: 100%;
     min-width: auto;
   }
+}
+
+/* Info Window Styles */
+.info-window-container {
+  padding: 0rem 0.5rem;
+  max-width: 300px;
+  margin-bottom: 16px;
+}
+
+.info-window-title {
+  margin-top: 0 !important;
+  margin-bottom: 8px !important;
+  font-size: 18px !important;
+}
+
+.info-window-address {
+  margin-bottom: 12px !important;
+  color: #666;
+  font-size: 14px;
+}
+
+.info-window-image {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 8px;
 }
