--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -156,6 +156,7 @@
 }
 
 .place-card-image{
+  display: none;
   width: 100%;
   height: 150px;
   object-fit: cover;
@@ -193,6 +194,33 @@
 
 .place-rating-text {
   color: #4b5563;
+}
+
+/* Info Window Styles */
+.info-window-container {
+  padding: 0rem 0.5rem;
+  max-width: 300px;
+  margin-bottom: 16px;
+}
+
+.info-window-title {
+  margin-top: 0 !important;
+  margin-bottom: 8px !important;
+  font-size: 18px !important;
+}
+
+.info-window-address {
+  margin-bottom: 12px !important;
+  color: #666;
+  font-size: 14px;
+}
+
+.info-window-image {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 8px;
 }
 
 /* Mobile Styles */
@@ -238,31 +266,8 @@
     width: 100%;
     min-width: auto;
   }
-}
 
-/* Info Window Styles */
-.info-window-container {
-  padding: 0rem 0.5rem;
-  max-width: 300px;
-  margin-bottom: 16px;
-}
-
-.info-window-title {
-  margin-top: 0 !important;
-  margin-bottom: 8px !important;
-  font-size: 18px !important;
-}
-
-.info-window-address {
-  margin-bottom: 12px !important;
-  color: #666;
-  font-size: 14px;
-}
-
-.info-window-image {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 8px;
-  margin-bottom: 8px;
+  .place-card-image{
+    display: block;
+  }
 }
